tests/programs/symex/a5-test-cases/fail/symex_array_fail.rice
// symex
#[symex]
fn example(x: [int]) {
  if x[0] > 0 {
    assert(x[1] - x[0] < 10)
  }
}